; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_aes_ctr.c_av_aes_ctr_set_random_iv.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_aes_ctr.c_av_aes_ctr_set_random_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AVAESCTR = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @av_aes_ctr_set_random_iv(%struct.AVAESCTR* %0) #0 {
  %2 = alloca %struct.AVAESCTR*, align 8
  %3 = alloca [2 x i32], align 4
  store %struct.AVAESCTR* %0, %struct.AVAESCTR** %2, align 8
  %4 = call i32 (...) @av_get_random_seed()
  %5 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 0
  store i32 %4, i32* %5, align 4
  %6 = call i32 (...) @av_get_random_seed()
  %7 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 1
  store i32 %6, i32* %7, align 4
  %8 = load %struct.AVAESCTR*, %struct.AVAESCTR** %2, align 8
  %9 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 0
  %10 = call i32 @av_aes_ctr_set_iv(%struct.AVAESCTR* %8, i32* %9)
  ret void
}

declare dso_local i32 @av_get_random_seed(...) #1

declare dso_local i32 @av_aes_ctr_set_iv(%struct.AVAESCTR*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
